frontend/kubernetes/core-engine-frontend.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-engine-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx-ext
  rules:
    - host: flow-finder-dev-app.kube-ext.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-engine-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - flow-finder-dev-app.kube-ext.isc.heia-fr.ch
